--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
             .progress{height:2px; border-radius:1px; background:#444}
             .progress.wait{background:#F0F}
             .seek-bar{background:#F1F1F1; padding: 1px 0; height:2px}
+            button{
+                background-color: #fff;
+                border: 1px solid #dbdbdb;
+                color: #363636;
+                border-radius: 4px;
+                box-shadow: none;
+                font-size: 1rem;
+                height: 2.25em;
+            }
+            button+button{margin-left:.25em}
+            button[disabled] {
+                background-color: #fff;
+                border-color: #dbdbdb;
+                box-shadow: none;
+                opacity: .5;
+            }
         </style>
     </body>
 </html>
